
2006-10-23	<cwarrensmith@gmail.com>
	* Added more info the index out of range runtime error message
	* Fixed configure.in for cygwin build
	
2006-08-19	<cwarrensmith@gmail.com>
	* added "multiline" option to the TEXT command to support
	the multiline edit control (GTK)
	* fixed RINSTR command to work as advertised.
	* TSAVE can now take a file number arg like TLOAD
	
2006-08-16	<cwarrensmith@gmail.com>
	* Fixed error message with unterminated strings in a sub or func. 
	complained about missing END instead of the missing " char
	* Quoted strings no longer required the end quote char. A new line is 
	taken as the end of string.
	
2006-08-12	<cwarrensmith@gmail.com>
	* added support for func/sub pointer variables used with the call statement:
	func foo(s)
         foo="foo!"+s
        end
        sub bar
          ? "in bar"
        end
        p = @foo
        ? call(@foo, "#")
        ? call(p, "%")
        pb = @bar
        call pb
        call @bar
 
	* USRCALL has been removed since it never worked and the above
 	is a better replacement (IMHO)
	
2006-07-28	<cwarrensmith@gmail.com>
	* updated chain command to take string or array	of string arguments in 
	lieu of a file name. After calling this command, the calling program now 
	successfully resumes.
	* added HAVE_C_MALLOC to replace complicated
	memory routines with simple malloc/free calls
	* added GRID+TAB button support to GTK build

2006-05-27	<cwarrensmith@gmail.com>
	* added form support to GTK build
	
2006-05-27	<cwarrensmith@gmail.com>
	* bc_store_string() now handles escaped double quotes

2006-04-12	<cwarrensmith@gmail.com>
	* updated sockcl_open() to handle server listen sockets

================================================================================

Future ideas:
- Add support for detecting another program has changed
  the edited file in fltk version
- Add command argument GUI for fltk to allow run time args to be set.
  usefull when creating command line based applications.