@@ -188,8 +188,8 @@
 #define ERR_RUN_FILE			"RUN/EXEC\"%s\" FAILED"
 #define ERR_RUNFUNC_FILE		"RUN(\"%s\"): FAILED"
 #define ERR_PARCOUNT_SP			"PARAM COUNT ERROR @%d=%X"
-#define ERR_DATE				"DATE ERROR"
-#define ERR_TIME				"TIME ERROR"
+#define ERR_DATE				"Invalid DATE: '%s'. Expected DD/MM/YYYY"
+#define ERR_TIME				"Invalid TIME: '%s'. Expected HH:MM:SS"
 #define ERR_BOUND_DIM			"U/LBOUND: Array of %d dimensions (%d)"
 #define ERR_BOUND_VAR			"U/LBOUND: Variable is not an array"
 #define ERR_FORMAT_INVALID_FORMAT	"WRONG FORMAT"
