@@ -188,8 +188,8 @@
 #define ERR_RUN_FILE			"RUN/EXEC\"%s\" Failed"
 #define ERR_RUNFUNC_FILE		"RUN(\"%s\"): Failed"
 #define ERR_PARCOUNT_SP			"Parameter count error @%d=%X"
-#define ERR_DATE				"Data error"
-#define ERR_TIME				"Time error"
+#define ERR_DATE				"Invalid DATE: '%s'. Expected DD/MM/YYYY"
+#define ERR_TIME				"Invalid TIME: '%s'. Expected HH:MM:SS"
 #define ERR_BOUND_DIM			"U/LBOUND: Array of %d dimensions (%d)"
 #define ERR_BOUND_VAR			"U/LBOUND: Variable is not an array"
 #define ERR_FORMAT_INVALID_FORMAT	"Wrong format"
